Created recipe handlers and 1 manager to test Also removed redudant code in the original recipe classes More collection optimisations